--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p class="text-xl mb-4">Created by:</p>
         <ul class="space-y-6">
             <li class="flex items-center">
-                <img src="https://scontent.fccu2-3.fna.fbcdn.net/v/t39.30808-6/396701169_815808676961932_1773765427170090161_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=OhGZaFBnrnkQ7kNvgEBGNTE&_nc_ht=scontent.fccu2-3.fna&oh=00_AYAdwOJ6t9ZPM0-iZ2yMonV3IFN0Hdela-g1jcUVMY7QxA&oe=667FAC93" alt="TITLI NATH" class="w-24 h-24 rounded-full mr-4">
+                <img src="https://media.licdn.com/dms/image/D4D03AQFYV7V8hCIuxQ/profile-displayphoto-shrink_400_400/0/1714921499772?e=1725494400&v=beta&t=jDICCZL9a8pdA21sqv0tfc0bL5KrwFrwnj01VZmCN_w" alt="TITLI NATH" class="w-24 h-24 rounded-full mr-4">
                 <div>
                     <b>TITLI NATH</b>
                     <div>
@@ -73,7 +73,7 @@
                 </div>
             </li>
             <li class="flex items-center">
-                <img src="https://scontent.fccu2-1.fna.fbcdn.net/v/t39.30808-6/439462219_972823191030962_1135666162090528568_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=OiBQqIrNJfEQ7kNvgEBmkpL&_nc_ht=scontent.fccu2-1.fna&oh=00_AYAWN7vgCtZDi8arhIaRljHYJ2k-M0i9nWPFtRPoHxTv4w&oe=667F8F26" alt="DEBANJALI BHATTACHARYA" class="w-24 h-24 rounded-full mr-4">
+                <img src="https://media.licdn.com/dms/image/D5603AQEKZPMPxYN3EA/profile-displayphoto-shrink_400_400/0/1707429800650?e=1725494400&v=beta&t=QXfszX0VEsKyMt5DS7XT2ZwAxeB5LZyhroGuzkuqCEo" alt="DEBANJALI BHATTACHARYA" class="w-24 h-24 rounded-full mr-4">
                 <div>
                     <b>DEBANJALI BHATTACHARYA</b>
                     <div>
