--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </li>
             <li class="flex items-center">
-                <img src="https://media.licdn.com/dms/image/D5603AQEKZPMPxYN3EA/profile-displayphoto-shrink_400_400/0/1707429800650?e=1725494400&v=beta&t=QXfszX0VEsKyMt5DS7XT2ZwAxeB5LZyhroGuzkuqCEo" alt="DEBANJALI BHATTACHARYA" class="w-24 h-24 rounded-full mr-4">
+                <img src="Debanjali Bhattacharya.png" alt="DEBANJALI BHATTACHARYA" class="w-24 h-24 rounded-full mr-4">
                 <div>
                     <b>DEBANJALI BHATTACHARYA</b>
                     <div>
