--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p class="text-xl mb-4">Created by:</p>
         <ul class="space-y-6">
             <li class="flex items-center">
-                <img src="https://media.licdn.com/dms/image/D4D03AQFYV7V8hCIuxQ/profile-displayphoto-shrink_400_400/0/1714921499772?e=1725494400&v=beta&t=jDICCZL9a8pdA21sqv0tfc0bL5KrwFrwnj01VZmCN_w" alt="TITLI NATH" class="w-24 h-24 rounded-full mr-4">
+                <img src="Titli Nath.png" alt="TITLI NATH" class="w-24 h-24 rounded-full mr-4">
                 <div>
                     <b>TITLI NATH</b>
                     <div>
